@@ -1,7 +1,6 @@
 package gov.cms.madie.terminology.service;
 
 import ca.uhn.fhir.context.FhirContext;
-import gov.cms.madie.models.mapping.CodeSystemEntry;
 import gov.cms.madie.models.measure.ManifestExpansion;
 import gov.cms.madie.terminology.dto.Code;
 import gov.cms.madie.terminology.dto.CodeStatus;
@@ -30,7 +29,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
@@ -38,6 +36,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.dao.DataAccessException;
 
 import java.io.File;
 import java.io.IOException;
@@ -54,81 +53,81 @@ class FhirTerminologyServiceTest {
 
   @Mock FhirTerminologyServiceWebClient fhirTerminologyServiceWebClient;
   @Mock FhirContext fhirContext;
-  @Mock MappingService mappingService;
   @Mock CodeSystemRepository codeSystemRepository;
   @Mock VsacService vsacService;
   @InjectMocks FhirTerminologyService fhirTerminologyService;
 
-  List<CodeSystemEntry> codeSystemEntries;
   private UmlsUser umlsUser;
   private static final String TEST_HARP_ID = "te$tHarpId";
   private static final String TEST_API_KEY = "te$tKey";
   private final String mockManifestResource =
-      "{\n"
-          + "              \"resourceType\": \"Bundle\",\n"
-          + "              \"id\": \"library-search\",\n"
-          + "              \"meta\":\n"
-          + "              {\n"
-          + "                \"lastUpdated\": \"2024-03-14T14:04:52.456-04:00\"\n"
-          + "              },\n"
-          + "              \"type\": \"searchset\",\n"
-          + "              \"total\": 25,\n"
-          + "              \"link\":\n"
-          + "              [\n"
-          + "                {\n"
-          + "                  \"relation\": \"self\",\n"
-          + "                  \"url\": \"https://uat-cts.nlm.nih.gov/fhir/Library\"\n"
-          + "                }\n"
-          + "              ],\n"
-          + "              \"entry\":\n"
-          + "              [\n"
-          + "                {\n"
-          + "                  \"fullUrl\": \"http://cts.nlm.nih.gov/fhir/Library/ecqm-update-4q2017-eh\",\n"
-          + "                  \"resource\":\n"
-          + "                  {\n"
-          + "                    \"resourceType\": \"Library\",\n"
-          + "                    \"id\": \"ecqm-update-4q2017-eh\",\n"
-          + "                    \"meta\":\n"
-          + "                    {\n"
-          + "                      \"profile\":\n"
-          + "                      [\n"
-          + "                        \"http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/publishable-library-cqfm\",\n"
-          + "                        \"http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/quality-program-cqfm\"\n"
-          + "                      ]\n"
-          + "                    },\n"
-          + "                    \"url\": \"http://cts.nlm.nih.gov/fhir/Library/ecqm-update-4q2017-eh\",\n"
-          + "                    \"version\": \"2017-09-15\",\n"
-          + "                    \"title\": \"Ecqm Update 4q2017 EH\",\n"
-          + "                    \"status\": \"active\"\n"
-          + "                  }\n"
-          + "                },\n"
-          + "                {\n"
-          + "                  \"fullUrl\": \"http://cts.nlm.nih.gov/fhir/Library/mu2-update-2012-10-25\",\n"
-          + "                  \"resource\":\n"
-          + "                  {\n"
-          + "                    \"resourceType\": \"Library\",\n"
-          + "                    \"id\": \"mu2-update-2012-10-25\",\n"
-          + "                    \"meta\":\n"
-          + "                    {\n"
-          + "                      \"profile\":\n"
-          + "                      [\n"
-          + "                        \"http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/publishable-library-cqfm\",\n"
-          + "                        \"http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/quality-program-cqfm\"\n"
-          + "                      ]\n"
-          + "                    },\n"
-          + "                    \"url\": \"http://cts.nlm.nih.gov/fhir/Library/mu2-update-2012-10-25\",\n"
-          + "                    \"version\": \"2012-10-25\",\n"
-          + "                    \"status\": \"active\"\n"
-          + "                  }\n"
-          + "                }\n"
-          + "              ]\n"
-          + "            }";
+      """
+      {
+        "resourceType": "Bundle",
+        "id": "library-search",
+        "meta": {
+          "lastUpdated": "2024-03-14T14:04:52.456-04:00"
+        },
+        "type": "searchset",
+        "total": 25,
+        "link": [
+          {
+            "relation": "self",
+            "url": "https://uat-cts.nlm.nih.gov/fhir/Library"
+          }
+        ],
+        "entry": [
+          {
+            "fullUrl": "http://cts.nlm.nih.gov/fhir/Library/ecqm-update-4q2017-eh",
+            "resource": {
+              "resourceType": "Library",
+              "id": "ecqm-update-4q2017-eh",
+              "meta": {
+                "profile": [
+                  "http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/publishable-library-cqfm",
+                  "http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/quality-program-cqfm"
+                ]
+              },
+              "url": "http://cts.nlm.nih.gov/fhir/Library/ecqm-update-4q2017-eh",
+              "version": "2017-09-15",
+              "title": "Ecqm Update 4q2017 EH",
+              "status": "active"
+            }
+          },
+          {
+            "fullUrl": "http://cts.nlm.nih.gov/fhir/Library/mu2-update-2012-10-25",
+            "resource": {
+              "resourceType": "Library",
+              "id": "mu2-update-2012-10-25",
+              "meta": {
+                "profile": [
+                  "http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/publishable-library-cqfm",
+                  "http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/quality-program-cqfm"
+                ]
+              },
+              "url": "http://cts.nlm.nih.gov/fhir/Library/mu2-update-2012-10-25",
+              "version": "2012-10-25",
+              "status": "active"
+            }
+          }
+        ]
+      }
+      """;
   private final String mockCodeSystemsResource =
       "{\"resourceType\":\"Bundle\",\"id\":\"codesystem-search\",\"meta\":{\"lastUpdated\":\"2024-03-28T15:04:59.375-04:00\"},\"type\":\"searchset\",\"total\":831,\"link\":[{\"relation\":\"self\",\"url\":\"http://uat-cts.nlm.nih.gov/fhir/res/CodeSystem?_offset=500&_count=2\"},{\"relation\":\"first\",\"url\":\"http://uat-cts.nlm.nih.gov/fhir/res/CodeSystem?_offset=0&_count=2\"},{\"relation\":\"previous\",\"url\":\"http://uat-cts.nlm.nih.gov/fhir/res/CodeSystem?_offset=498&_count=2\"},{\"relation\":\"last\",\"url\":\"http://uat-cts.nlm.nih.gov/fhir/res/CodeSystem?_offset=829&_count=2\"}],\"entry\":[{\"fullUrl\":\"http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation\",\"resource\":{\"resourceType\":\"CodeSystem\",\"id\":\"ObservationInterpretation\",\"meta\":{\"versionId\":\"1710382394\",\"lastUpdated\":\"2019-04-25T00:00:00.000-04:00\",\"profile\":[\"http://hl7.org/fhir/StructureDefinition/shareablecodesystem\"]},\"url\":\"http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation\",\"identifier\":[{\"system\":\"urn:ietf:rfc:3986\",\"value\":\"urn:oid:2.16.840.1.113883.5.83\"}],\"version\":\"2019-03-01\",\"name\":\"ObservationInterpretation\",\"title\":\"ObservationInterpretation\",\"status\":\"active\",\"experimental\":false,\"date\":\"2019-04-15T00:00:00-04:00\",\"_publisher\":{\"extension\":[{\"url\":\"http://hl7.org/fhir/StructureDefinition/data-absent-reason\",\"valueCode\":\"unknown\"}]},\"content\":\"complete\",\"count\":57,\"concept\":[{\"code\":\"<\",\"display\":\"Offscalelow\"},{\"code\":\">\",\"display\":\"Offscalehigh\"},{\"code\":\"A\",\"display\":\"Abnormal\"},{\"code\":\"AA\",\"display\":\"Criticalabnormal\"},{\"code\":\"AC\",\"display\":\"Anti-complementarysubstancespresent\"},{\"code\":\"B\",\"display\":\"Better\"},{\"code\":\"CAR\",\"display\":\"Carrier\"},{\"code\":\"Carrier\",\"display\":\"Carrier\"},{\"code\":\"D\",\"display\":\"Significantchangedown\"},{\"code\":\"DET\",\"display\":\"Detected\"},{\"code\":\"E\",\"display\":\"Equivocal\"},{\"code\":\"EX\",\"display\":\"outsidethreshold\"},{\"code\":\"EXP\",\"display\":\"Expected\"},{\"code\":\"H\",\"display\":\"High\"},{\"code\":\"H>\",\"display\":\"Significantlyhigh\"},{\"code\":\"HH\",\"display\":\"Criticalhigh\"},{\"code\":\"HM\",\"display\":\"HoldforMedicalReview\"},{\"code\":\"HU\",\"display\":\"Significantlyhigh\"},{\"code\":\"HX\",\"display\":\"abovehighthreshold\"},{\"code\":\"I\",\"display\":\"Intermediate\"},{\"code\":\"IE\",\"display\":\"Insufficientevidence\"},{\"code\":\"IND\",\"display\":\"Indeterminate\"},{\"code\":\"L\",\"display\":\"Low\"},{\"code\":\"L<\",\"display\":\"Significantlylow\"},{\"code\":\"LL\",\"display\":\"Criticallow\"},{\"code\":\"LU\",\"display\":\"Significantlylow\"},{\"code\":\"LX\",\"display\":\"belowlowthreshold\"},{\"code\":\"MS\",\"display\":\"moderatelysusceptible\"},{\"code\":\"N\",\"display\":\"Normal\"},{\"code\":\"NCL\",\"display\":\"NoCLSIdefinedbreakpoint\"},{\"code\":\"ND\",\"display\":\"Notdetected\"},{\"code\":\"NEG\",\"display\":\"Negative\"},{\"code\":\"NR\",\"display\":\"Non-reactive\"},{\"code\":\"NS\",\"display\":\"Non-susceptible\"},{\"code\":\"OBX\",\"display\":\"InterpretationqualifiersinseparateOBXsegments\"},{\"code\":\"ObservationInterpretationDetection\",\"display\":\"ObservationInterpretationDetection\"},{\"code\":\"ObservationInterpretationExpectation\",\"display\":\"ObservationInterpretationExpectation\"},{\"code\":\"POS\",\"display\":\"Positive\"},{\"code\":\"QCF\",\"display\":\"Qualitycontrolfailure\"},{\"code\":\"R\",\"display\":\"Resistant\"},{\"code\":\"RR\",\"display\":\"Reactive\"},{\"code\":\"ReactivityObservationInterpretation\",\"display\":\"ReactivityObservationInterpretation\"},{\"code\":\"S\",\"display\":\"Susceptible\"},{\"code\":\"SDD\",\"display\":\"Susceptible-dosedependent\"},{\"code\":\"SYN-R\",\"display\":\"Synergy-resistant\"},{\"code\":\"SYN-S\",\"display\":\"Synergy-susceptible\"},{\"code\":\"TOX\",\"display\":\"Cytotoxicsubstancepresent\"},{\"code\":\"U\",\"display\":\"Significantchangeup\"},{\"code\":\"UNE\",\"display\":\"Unexpected\"},{\"code\":\"VS\",\"display\":\"verysusceptible\"},{\"code\":\"W\",\"display\":\"Worse\"},{\"code\":\"WR\",\"display\":\"Weaklyreactive\"},{\"code\":\"_GeneticObservationInterpretation\",\"display\":\"GeneticObservationInterpretation\"},{\"code\":\"_ObservationInterpretationChange\",\"display\":\"ObservationInterpretationChange\"},{\"code\":\"_ObservationInterpretationExceptions\",\"display\":\"ObservationInterpretationExceptions\"},{\"code\":\"_ObservationInterpretationNormality\",\"display\":\"ObservationInterpretationNormality\"},{\"code\":\"_ObservationInterpretationSusceptibility\",\"display\":\"ObservationInterpretationSusceptibility\"}]}},{\"fullUrl\":\"http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation\",\"resource\":{\"resourceType\":\"CodeSystem\",\"id\":\"ObservationInterpretation\",\"meta\":{\"versionId\":\"1305437570\",\"lastUpdated\":\"2020-01-16T00:00:00.000-05:00\",\"profile\":[\"http://hl7.org/fhir/StructureDefinition/shareablecodesystem\"]},\"url\":\"http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation\",\"identifier\":[{\"system\":\"urn:ietf:rfc:3986\",\"value\":\"urn:oid:2.16.840.1.113883.5.83\"}],\"version\":\"2019-12-01\",\"name\":\"ObservationInterpretation\",\"title\":\"ObservationInterpretation\",\"status\":\"active\",\"experimental\":false,\"date\":\"2019-12-27T00:00:00-05:00\",\"_publisher\":{\"extension\":[{\"url\":\"http://hl7.org/fhir/StructureDefinition/data-absent-reason\",\"valueCode\":\"unknown\"}]},\"content\":\"complete\",\"count\":57,\"concept\":[{\"code\":\"<\",\"display\":\"Offscalelow\"},{\"code\":\">\",\"display\":\"Offscalehigh\"},{\"code\":\"A\",\"display\":\"Abnormal\"},{\"code\":\"AA\",\"display\":\"Criticalabnormal\"},{\"code\":\"AC\",\"display\":\"Anti-complementarysubstancespresent\"},{\"code\":\"B\",\"display\":\"Better\"},{\"code\":\"CAR\",\"display\":\"Carrier\"},{\"code\":\"Carrier\",\"display\":\"Carrier\"},{\"code\":\"D\",\"display\":\"Significantchangedown\"},{\"code\":\"DET\",\"display\":\"Detected\"},{\"code\":\"E\",\"display\":\"Equivocal\"},{\"code\":\"EX\",\"display\":\"outsidethreshold\"},{\"code\":\"EXP\",\"display\":\"Expected\"},{\"code\":\"H\",\"display\":\"High\"},{\"code\":\"H>\",\"display\":\"Significantlyhigh\"},{\"code\":\"HH\",\"display\":\"Criticalhigh\"},{\"code\":\"HM\",\"display\":\"HoldforMedicalReview\"},{\"code\":\"HU\",\"display\":\"Significantlyhigh\"},{\"code\":\"HX\",\"display\":\"abovehighthreshold\"},{\"code\":\"I\",\"display\":\"Intermediate\"},{\"code\":\"IE\",\"display\":\"Insufficientevidence\"},{\"code\":\"IND\",\"display\":\"Indeterminate\"},{\"code\":\"L\",\"display\":\"Low\"},{\"code\":\"L<\",\"display\":\"Significantlylow\"},{\"code\":\"LL\",\"display\":\"Criticallow\"},{\"code\":\"LU\",\"display\":\"Significantlylow\"},{\"code\":\"LX\",\"display\":\"belowlowthreshold\"},{\"code\":\"MS\",\"display\":\"moderatelysusceptible\"},{\"code\":\"N\",\"display\":\"Normal\"},{\"code\":\"NCL\",\"display\":\"NoCLSIdefinedbreakpoint\"},{\"code\":\"ND\",\"display\":\"Notdetected\"},{\"code\":\"NEG\",\"display\":\"Negative\"},{\"code\":\"NR\",\"display\":\"Non-reactive\"},{\"code\":\"NS\",\"display\":\"Non-susceptible\"},{\"code\":\"OBX\",\"display\":\"InterpretationqualifiersinseparateOBXsegments\"},{\"code\":\"ObservationInterpretationDetection\",\"display\":\"ObservationInterpretationDetection\"},{\"code\":\"ObservationInterpretationExpectation\",\"display\":\"ObservationInterpretationExpectation\"},{\"code\":\"POS\",\"display\":\"Positive\"},{\"code\":\"QCF\",\"display\":\"Qualitycontrolfailure\"},{\"code\":\"R\",\"display\":\"Resistant\"},{\"code\":\"RR\",\"display\":\"Reactive\"},{\"code\":\"ReactivityObservationInterpretation\",\"display\":\"ReactivityObservationInterpretation\"},{\"code\":\"S\",\"display\":\"Susceptible\"},{\"code\":\"SDD\",\"display\":\"Susceptible-dosedependent\"},{\"code\":\"SYN-R\",\"display\":\"Synergy-resistant\"},{\"code\":\"SYN-S\",\"display\":\"Synergy-susceptible\"},{\"code\":\"TOX\",\"display\":\"Cytotoxicsubstancepresent\"},{\"code\":\"U\",\"display\":\"Significantchangeup\"},{\"code\":\"UNE\",\"display\":\"Unexpected\"},{\"code\":\"VS\",\"display\":\"verysusceptible\"},{\"code\":\"W\",\"display\":\"Worse\"},{\"code\":\"WR\",\"display\":\"Weaklyreactive\"},{\"code\":\"_GeneticObservationInterpretation\",\"display\":\"GeneticObservationInterpretation\"},{\"code\":\"_ObservationInterpretationChange\",\"display\":\"ObservationInterpretationChange\"},{\"code\":\"_ObservationInterpretationExceptions\",\"display\":\"ObservationInterpretationExceptions\"},{\"code\":\"_ObservationInterpretationNormality\",\"display\":\"ObservationInterpretationNormality\"},{\"code\":\"_ObservationInterpretationSusceptibility\",\"display\":\"ObservationInterpretationSusceptibility\"}]}}]}";
 
   private String mockValueSetResourceWithCodes;
   private String mockValueSetResourceWithNoCodes;
   private String mockValueSetWithNoResource;
+  private gov.cms.madie.terminology.models.CodeSystem codeSystem =
+      gov.cms.madie.terminology.models.CodeSystem.builder()
+          .oid("urn:oid:2.16.840.1.113883.6.1")
+          .name("LOINC")
+          .version(
+              gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                  .fhirVersion("2.40")
+                  .build())
+          .build();
 
   @BeforeEach
   public void setUp() throws IOException {
@@ -144,18 +143,6 @@ class FhirTerminologyServiceTest {
     mockValueSetWithNoResource =
         FileUtils.readFileToString(
             Objects.requireNonNull(fileWithNoResource), Charset.defaultCharset());
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2022-05");
-    version.setFhir("2022");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("Icd10CM")
-            .oid("urn:oid:2.16.840.1.113883.6.90")
-            .url("http://hl7.org/fhir/sid/icd-10-cm")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
   }
 
   @Test
@@ -195,7 +182,21 @@ class FhirTerminologyServiceTest {
     when(fhirTerminologyServiceWebClient.getValueSetResources(anyString(), any()))
         .thenReturn(mockValueSetResourceWithCodes);
     when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
+    when(codeSystemRepository.findByFullUrlAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(
+            Optional.of(
+                gov.cms.madie.terminology.models.CodeSystem.builder()
+                    .fullUrl("http://hl7.org/fhir/sid/icd-10-cm")
+                    .title("ICD10CM")
+                    .name("Icd10CM")
+                    .version(
+                        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                            .fhirVersion("2022")
+                            .vsacVersion("2022-05")
+                            .build())
+                    .versionId("vid")
+                    .oid("urn:oid:2.16.840.1.113883.6.90")
+                    .build()));
     List<QdmValueSet> result =
         fhirTerminologyService.getValueSetsExpansionsForQdm(valueSetsSearchCriteria, umlsUser);
     assertEquals(1, result.size());
@@ -232,7 +233,6 @@ class FhirTerminologyServiceTest {
     when(fhirTerminologyServiceWebClient.getValueSetResources(
             anyString(), any(ValueSetsSearchCriteria.class)))
         .thenReturn(mockValueSetResourceWithNoCodes);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
     List<QdmValueSet> result =
         fhirTerminologyService.getValueSetsExpansionsForQdm(valueSetsSearchCriteria, umlsUser);
     assertEquals(1, result.size());
@@ -264,7 +264,6 @@ class FhirTerminologyServiceTest {
     when(fhirTerminologyServiceWebClient.getValueSetResources(anyString(), any()))
         .thenReturn(mockValueSetWithNoResource);
     when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
 
     VsacParseBatchValueSetExpansionException ex =
         assertThrows(
@@ -286,7 +285,6 @@ class FhirTerminologyServiceTest {
   @Test
   void getsValueSetsExpansionsForQdmIfSearchCriteriaIsEmpty() {
     var valueSetsSearchCriteria = ValueSetsSearchCriteria.builder().build();
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
     List<QdmValueSet> result =
         fhirTerminologyService.getValueSetsExpansionsForQdm(valueSetsSearchCriteria, umlsUser);
     assertEquals(0, result.size());
@@ -294,7 +292,6 @@ class FhirTerminologyServiceTest {
 
   @Test
   void getsValueSetsExpansionsForQdmIfSearchCriteriaIsNull() {
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
     List<QdmValueSet> result = fhirTerminologyService.getValueSetsExpansionsForQdm(null, umlsUser);
     assertEquals(0, result.size());
   }
@@ -342,7 +339,8 @@ class FhirTerminologyServiceTest {
     bundle.addEntry(t);
     when(fhirTerminologyServiceWebClient.getCodeSystemsPage(anyInt(), anyInt(), anyString()))
         .thenReturn(mockCodeSystemsResource);
-    when(codeSystemRepository.findById(anyString())).thenReturn(Optional.empty());
+    when(codeSystemRepository.findByOidAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(Optional.empty());
 
     // call method under test and assert results
     List<gov.cms.madie.terminology.models.CodeSystem> resultList =
@@ -381,14 +379,17 @@ class FhirTerminologyServiceTest {
             .id("titleversion")
             .title("title")
             .name("name1")
-            .version("version")
+            .version(
+                gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                    .fhirVersion("version")
+                    .build())
             .versionId("vid")
             .oid("codeUrl")
             .lastUpdated(Instant.now())
             .lastUpdatedUpstream(new Date())
             .build();
 
-    when(codeSystemRepository.findById(anyString()))
+    when(codeSystemRepository.findByOidAndVersionFhirVersion(anyString(), anyString()))
         .thenReturn(Optional.ofNullable(existingCodeSystem));
 
     List<gov.cms.madie.terminology.models.CodeSystem> result =
@@ -402,44 +403,55 @@ class FhirTerminologyServiceTest {
     var c1 = new gov.cms.madie.terminology.models.CodeSystem();
     c1.setTitle("t1");
     c1.setOid("fakeoid1");
-    c1.setVersion("1.0");
+    c1.setFullUrl("http://example.com/cs1");
+    c1.setVersion(
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+            .fhirVersion("1.0")
+            .vsacVersion("1")
+            .build());
     var c2 = new gov.cms.madie.terminology.models.CodeSystem();
     c2.setTitle("t2");
     c2.setOid("fakeoid2");
-    c2.setVersion("2.0");
+    c2.setFullUrl("http://example.com/cs2");
+    c2.setVersion(
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+            .fhirVersion("2.0")
+            .vsacVersion("2")
+            .build());
     var c3 = new gov.cms.madie.terminology.models.CodeSystem();
     c3.setTitle("t3");
     c3.setOid("fakeoid3");
-    c3.setVersion("2024");
+    c3.setFullUrl("http://example.com/cs3");
+    c3.setVersion(
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder().fhirVersion("2024").build());
+    var c4 = new gov.cms.madie.terminology.models.CodeSystem();
+    c4.setTitle("t4");
+    c4.setOid("NOT.IN.VSAC");
+    c4.setFullUrl("http://example.com/cs4");
+    c4.setVersion(
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+            .fhirVersion("fhirOnly")
+            .build());
 
-    CodeSystemEntry.Version cv1 =
-        new CodeSystemEntry.Version().toBuilder().fhir("1.0").vsac("1").build();
-    CodeSystemEntry.Version cv2 =
-        new CodeSystemEntry.Version().toBuilder().fhir("2.0").vsac("2").build();
-    CodeSystemEntry.Version cv3 = new CodeSystemEntry.Version().toBuilder().fhir("latest").build();
-    var ce1 = new CodeSystemEntry().toBuilder().versions(List.of(cv1)).oid("fakeoid1").build();
-    var ce2 = new CodeSystemEntry().toBuilder().versions(List.of(cv2)).oid("fakeoid2").build();
-    var ce3 = new CodeSystemEntry().toBuilder().versions(List.of(cv3)).oid("NOT.IN.VSAC").build();
-
-    List<CodeSystemEntry> codeSystemEntries = Arrays.asList(ce1, ce2, ce3);
-    List<gov.cms.madie.terminology.models.CodeSystem> codeSystems = Arrays.asList(c1, c2, c3);
-    when(mappingService.getCodeSystemEntries()).thenAnswer(invocation -> codeSystemEntries);
-    when(codeSystemRepository.findAll()).thenAnswer(invocation -> codeSystems);
-    List<gov.cms.madie.terminology.models.CodeSystem> resultListAll =
+    List<gov.cms.madie.terminology.models.CodeSystem> codeSystems = Arrays.asList(c1, c2, c3, c4);
+    when(codeSystemRepository.findAll()).thenReturn(codeSystems);
+    List<gov.cms.madie.terminology.models.CodeSystem> result =
         fhirTerminologyService.getAllCodeSystems();
 
     verify(codeSystemRepository).findAll();
-    assertEquals(3, resultListAll.size());
-    assertEquals("t1", resultListAll.get(0).getTitle());
-    assertEquals("1", resultListAll.get(0).getQdmDisplayVersion());
+    assertEquals(3, result.size());
+    assertEquals("t1", result.get(0).getTitle());
+    assertEquals("1.0", result.get(0).getVersion().getFhirVersion());
+    assertEquals("1", result.get(0).getVersion().getVsacVersion());
 
-    assertEquals("t2", resultListAll.get(1).getTitle());
-    assertEquals("2", resultListAll.get(1).getQdmDisplayVersion());
+    assertEquals("t2", result.get(1).getTitle());
+    assertEquals("2.0", result.get(1).getVersion().getFhirVersion());
+    assertEquals("2", result.get(1).getVersion().getVsacVersion());
 
     // Verify FHIR only Code Systems appear in the result set
-    assertEquals("t3", resultListAll.get(2).getTitle());
-    assertEquals("2024", resultListAll.get(2).getVersion());
-    assertNull(resultListAll.get(2).getQdmDisplayVersion());
+    assertEquals("t3", result.get(2).getTitle());
+    assertEquals("2024", result.get(2).getVersion().getFhirVersion());
+    assertNull(result.get(2).getVersion().getVsacVersion());
   }
 
   @Test
@@ -474,7 +486,9 @@ class FhirTerminologyServiceTest {
     String codeName = "1963-8";
     String codeSystem = "LOINC";
     String version = "2.40";
-    when(codeSystemRepository.findByNameAndVersion(codeSystem, version))
+    when(codeSystemRepository.findByNameAndVersionFhirVersion(codeSystem, version))
+        .thenReturn(Optional.empty());
+    when(codeSystemRepository.findByNameAndVersionVsacVersion(codeSystem, version))
         .thenReturn(Optional.empty());
     assertThat(
         fhirTerminologyService.retrieveCode(codeName, codeSystem, version, TEST_API_KEY),
@@ -503,30 +517,21 @@ class FhirTerminologyServiceTest {
             + "    \"valueString\": \"2.16.840.1.113883.6.1\"\n"
             + "  } ]\n"
             + "}";
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version versions = new CodeSystemEntry.Version();
-    versions.setVsac("2.40");
-    versions.setFhir("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("1963-8")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(versions))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
 
     var codeSystem =
         gov.cms.madie.terminology.models.CodeSystem.builder()
             .fullUrl("http://loinc.org")
             .title("LOINC")
             .name("LOINC")
-            .version("2.40")
+            .version(
+                gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                    .fhirVersion("2.40")
+                    .vsacVersion("2.40")
+                    .build())
             .versionId("2084800774")
             .oid("urn:oid:2.16.840.1.113883.6.1")
             .build();
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    when(codeSystemRepository.findByNameAndVersion(anyString(), anyString()))
+    when(codeSystemRepository.findByNameAndVersionFhirVersion(anyString(), anyString()))
         .thenReturn(Optional.of(codeSystem));
     when(fhirTerminologyServiceWebClient.getCodeResource(codeName, codeSystem, TEST_API_KEY))
         .thenReturn(codeJson);
@@ -573,35 +578,25 @@ class FhirTerminologyServiceTest {
             + "  } ]\n"
             + "}";
 
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2.40");
-    version.setFhir("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("8462-4")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-
     gov.cms.madie.terminology.models.CodeSystem codeSystem =
         gov.cms.madie.terminology.models.CodeSystem.builder()
             .id("LOINC2.40")
             .fullUrl("http://loinc.org")
             .title("LOINC")
             .name("LOINC")
-            .version("2.40")
+            .version(
+                gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                    .fhirVersion("2.40")
+                    .vsacVersion("2.40")
+                    .build())
             .versionId("404676818")
             .oid("urn:oid:2.16.840.1.113883.6.1")
             .lastUpdated(Instant.parse("2024-04-30T20:18:48.706Z"))
             .lastUpdatedUpstream(new Date("Fri Apr 01 00:00:00 EDT 2022"))
+            .isLatestVersion(true)
             .build();
 
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    when(codeSystemRepository.findByOidAndVersion(anyString(), anyString()))
-        .thenReturn(Optional.ofNullable(codeSystem));
+    when(codeSystemRepository.findAllByOid(anyString())).thenReturn(List.of(codeSystem));
     when(fhirTerminologyServiceWebClient.getCodeResource(anyString(), any(), any()))
         .thenReturn(codeJson);
     when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
@@ -709,7 +704,7 @@ class FhirTerminologyServiceTest {
   }
 
   /* this test is for branch testing on requestAllValueSetsExpansions() method when
-   * it throw new VsacParseBatchValueSetExpansionException AND
+   * it throw news VsacParseBatchValueSetExpansionException AND
    * valueSetsSearchCriteria.getManifestExpansion() == null
    */
   @Test
@@ -933,260 +928,156 @@ class FhirTerminologyServiceTest {
         .getCodeSystemsPage(anyInt(), anyInt(), eq(TEST_API_KEY));
   }
 
-  /*
-   * this test covers retrieveCode() method,
-   * last line: return null;
-   */
-  @Test
-  void testRetrieveCodeWhenCodeSystemVersionNull() {
-    String codeName = "1963-8";
-    String codeSystemName = "LOINC";
-    String version = "2.40";
-
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version versions = new CodeSystemEntry.Version();
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("1963-8")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(versions))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-
-    var codeSystem =
-        gov.cms.madie.terminology.models.CodeSystem.builder()
-            .fullUrl("http://loinc.org")
-            .title("LOINC")
-            .name("LOINC")
-            .version("2.40")
-            .versionId("2084800774")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .build();
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    when(codeSystemRepository.findByNameAndVersion(anyString(), anyString()))
-        .thenReturn(Optional.of(codeSystem));
-
-    Code code =
-        fhirTerminologyService.retrieveCode(codeName, codeSystemName, version, TEST_API_KEY);
-    assertNull(code);
-  }
-
-  /* this is branch coverage for retrieveCodesAndCodeSystems() method
-   * when !StringUtils.isEmpty(codeName)
-   */
-  @Test
-  void retrieveCodesAndCodeSystemsReturnsNullWhenCodeNameNull() {
-    // Line 530 coverage: StringUtils.isEmpty(codeName)
-    List<Map<String, String>> codeList =
-        List.of(
-            Map.of(
-                "code", "",
-                "codeSystem", "LOINC",
-                "oid", "'urn:oid:2.16.840.1.113883.6.1'",
-                "versionIncluded", "false"));
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2.40");
-    version.setFhir("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("8462-4")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
-    assertNull(result.get(0));
-  }
-
-  /* this is branch coverage for retrieveCodesAndCodeSystems() method
-   * when !StringUtils.isEmpty(codeSystemName)
-   */
-  @Test
-  void retrieveCodesAndCodeSystemsReturnsNullWhenCodeSystemNameNull() {
-    // Line 531 coverage: StringUtils.isEmpty(codeSystemName)
-    List<Map<String, String>> codeList =
-        List.of(
-            Map.of(
-                "code", "test",
-                "codeSystem", "",
-                "oid", "'urn:oid:2.16.840.1.113883.6.1'",
-                "versionIncluded", "false"));
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2.40");
-    version.setFhir("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("8462-4")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
-    assertNull(result.get(0));
-  }
-
-  /* this is branch coverage for retrieveCodesAndCodeSystems() method
-   * when !StringUtils.isEmpty(fhirVersion)
-   */
-  @Test
-  void retrieveCodesAndCodeSystemsReturnsNullWhenFhirVersionNull() {
-    // Line 532 coverage: StringUtils.isEmpty(fhirVersion)
-    List<Map<String, String>> codeList =
-        List.of(
-            Map.of(
-                "code", "test",
-                "codeSystem", "LOINC",
-                "oid", "'urn:oid:2.16.840.1.113883.6.1'",
-                "versionIncluded", "false"));
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("8462-4")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
-    assertNull(result.get(0));
-  }
-
-  /* this test is to cover retrieveCodesAndCodeSystems() method line 539
-   * when codeSystem == null, it should: return null;
-   */
-  @Test
-  void retrieveCodeReturnsNullWhenCodeSystemVersionNotFound() {
-    // Line 539 coverage
-    List<Map<String, String>> codeList =
-        List.of(
-            Map.of(
-                "code", "test",
-                "codeSystem", "LOINC",
-                "oid", "'urn:oid:2.16.840.1.113883.6.1'",
-                "versionIncluded", "false"));
-    codeSystemEntries = new ArrayList<>();
-    CodeSystemEntry.Version version = new CodeSystemEntry.Version();
-    version.setVsac("2.40");
-    version.setFhir("2.40");
-    var codeSystemEntry =
-        CodeSystemEntry.builder()
-            .name("8462-4")
-            .oid("urn:oid:2.16.840.1.113883.6.1")
-            .url("http://loinc.org")
-            .versions(List.of(version))
-            .build();
-    codeSystemEntries.add(codeSystemEntry);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
-    assertNull(result.get(0));
-  }
-
-  /* this branch coverage is for retrieveCodesAndCodeSystems() method
-   * when !codeSystemVersion.isPresent(), it should: return null;
+  /* this branch coverage is for retrieveCodesAndCodeSystems() method, line 487
+   * when codeSystemVersion.isEmpty(), it should: return null;
    */
   @Test
   void retrieveCodesAndCodeSystemsReturnsNullWhenCodeIsEmpty() {
-    // Covers line 533 in FhirTerminologyService.java
     List<Map<String, String>> codeList =
         List.of(
             Map.of(
-                "code", "",
+                "code", "test",
                 "codeSystem", "LOINC",
                 "oid", "'urn:oid:2.16.840.1.113883.6.1'",
                 "versionIncluded", "false"));
-    when(mappingService.getCodeSystemEntries()).thenReturn(Collections.emptyList());
+    when(codeSystemRepository.findAllByOid(anyString())).thenReturn(List.of(codeSystem));
     List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
     assertNull(result.get(0));
   }
 
-  /* this test is for private String parseOidFromIdentifier()
+  /* this is branch coverage for retrieveCodesAndCodeSystems() method, line 488
+   * when || StringUtils.isEmpty(codeName)
+   */
+  @Test
+  void retrieveCodesAndCodeSystemsReturnsNullWhenCodeNameNull() {
+    List<Map<String, String>> codeList =
+        List.of(
+            Map.of(
+                "code", "", // codeName is empty
+                "codeSystem", "LOINC",
+                "oid", "urn:oid:2.16.840.1.113883.6.1",
+                "versionIncluded", "false",
+                "version", "2.40"));
+
+    when(codeSystemRepository.findAllByOid(anyString())).thenReturn(List.of(codeSystem));
+    List<gov.cms.madie.terminology.models.CodeSystem> repoResult =
+        codeSystemRepository.findAllByOid("urn:oid:2.16.840.1.113883.6.1");
+    assertFalse(repoResult.isEmpty());
+    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
+    assertNull(result.get(0));
+  }
+
+  /* this test is branch coverage for retrieveCodesAndCodeSystems() method, line 489
+   * when StringUtils.isEmpty(codeSystemName)
+   */
+  @Test
+  void retrieveCodesAndCodeSystemsReturnsNullWhenCodeSystemNameNull() {
+    List<Map<String, String>> codeList =
+        List.of(
+            Map.of(
+                "code", "test",
+                "codeSystem", "", // codeSystemName is empty
+                "oid", "urn:oid:2.16.840.1.113883.6.1",
+                "versionIncluded", "false",
+                "version", "2.40"));
+
+    when(codeSystemRepository.findAllByOid(anyString())).thenReturn(List.of(codeSystem));
+    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
+    assertNull(result.get(0));
+  }
+
+  /* this test is branch coverage for retrieveCodesAndCodeSystems() method, line 490
+   * when !codeSystemVersion.get().isFhir()
+   */
+  @Test
+  void retrieveCodesAndCodeSystemsReturnsNullWhenFhirVersionNull() {
+    List<Map<String, String>> codeList =
+        List.of(
+            Map.of(
+                "code", "test",
+                "codeSystem", "LOINC",
+                "oid", "'urn:oid:2.16.840.1.113883.6.1'",
+                "versionIncluded", "false",
+                "version", "")); // !codeSystemVersion.get().isFhir()
+
+    codeSystem.setVersion(
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+            .fhirVersion("")
+            .vsacVersion("")
+            .build());
+    when(codeSystemRepository.findAllByOid(anyString())).thenReturn(List.of(codeSystem));
+    List<Code> result = fhirTerminologyService.retrieveCodesAndCodeSystems(codeList, TEST_API_KEY);
+    assertNull(result.get(0));
+  }
+
+  /* this test is for private String parseOidFromIdentifier(),line 424
    * when StringUtils.equalsIgnoreCase(StringUtils.deleteWhitespace(identifier.getValue())
    * it should: return "urn:oid:2.16.840.1.113883.6.285";
    */
   @Test
   void parseOidFromIdentifierReturnsCustomOidForHCPCS() throws Exception {
-    // for private method: parseOidFromIdentifier: return "urn:oid:2.16.840.1.113883.6.285";
-    gov.cms.madie.terminology.service.MappingService mappingService =
-        Mockito.mock(gov.cms.madie.terminology.service.MappingService.class);
-    CodeSystemRepository codeSystemRepository = Mockito.mock(CodeSystemRepository.class);
-    gov.cms.madie.terminology.service.VsacService vsacService =
-        Mockito.mock(gov.cms.madie.terminology.service.VsacService.class);
-    FhirTerminologyService service =
-        new FhirTerminologyService(
-            fhirContext,
-            fhirTerminologyServiceWebClient,
-            mappingService,
-            codeSystemRepository,
-            vsacService);
     Identifier id = new Identifier();
     id.setValue("urn:oid:2.16.840.1.113883.6.14,2.16.840.1.113883.6.285");
     Method method =
         FhirTerminologyService.class.getDeclaredMethod("parseOidFromIdentifier", List.class);
     method.setAccessible(true);
-    String result = (String) method.invoke(service, List.of(id));
+    String result = (String) method.invoke(fhirTerminologyService, List.of(id));
     assertEquals("urn:oid:2.16.840.1.113883.6.285", result);
   }
 
-  /* this test is for parseOidFromIdentifier() method
+  /* this test is for parseOidFromIdentifier() method, line 429
    * covering last line: return "";
    */
   @Test
   void parseOidFromIdentifierReturnsEmptyStringWhenValueEmpty() throws Exception {
-    FhirTerminologyService service =
-        new FhirTerminologyService(
-            fhirContext,
-            fhirTerminologyServiceWebClient,
-            mappingService,
-            codeSystemRepository,
-            vsacService);
     Identifier id = new Identifier();
     id.setValue("");
     Method method =
         FhirTerminologyService.class.getDeclaredMethod("parseOidFromIdentifier", List.class);
     method.setAccessible(true);
-    String result = (String) method.invoke(service, List.of(id));
+    String result = (String) method.invoke(fhirTerminologyService, List.of(id));
     assertEquals("", result);
   }
 
-  /* this test covers private Optional<CodeSystemEntry.Version> getCodeSystemEntryVersion()
-   * if if (oid == null), it should: return Optional.empty();
+  /* this test covers private Optional<CodeSystemEntry.Version> getCodeSystemVersion(),
+   * line 504:
+   * if (oid == null), it should: return Optional.empty();
    */
   @Test
-  void getCodeSystemEntryVersionReturnsEmptyWhenOidIsNull() throws Exception {
-    FhirTerminologyService service =
-        new FhirTerminologyService(
-            fhirContext,
-            fhirTerminologyServiceWebClient,
-            mappingService,
-            codeSystemRepository,
-            vsacService);
-
+  void getCodeSystemVersionReturnsEmptyWhenOidIsNull() throws Exception {
     Method method =
         FhirTerminologyService.class.getDeclaredMethod(
-            "getCodeSystemEntryVersion", String.class, String.class, List.class);
+            "getCodeSystemVersion", String.class, String.class, List.class);
     method.setAccessible(true);
 
     Optional<?> result =
-        (Optional<?>) method.invoke(service, "version", null, Collections.emptyList());
+        (Optional<?>) method.invoke(fhirTerminologyService, "version", null, List.of(codeSystem));
+    assertTrue(result.isEmpty());
+  }
+
+  /* this test covers private Optional<CodeSystemEntry.Version> getCodeSystemVersion(),
+   * line 508:
+   * if (CollectionUtils.isEmpty(codeSystems)), it should: return Optional.empty();
+   */
+  @Test
+  void getCodeSystemVersionReturnsEmptyWhenCodeSystemsNull() throws Exception {
+    Method method =
+        FhirTerminologyService.class.getDeclaredMethod(
+            "getCodeSystemVersion", String.class, String.class, List.class);
+    method.setAccessible(true);
+
+    Optional<?> result =
+        (Optional<?>)
+            method.invoke(fhirTerminologyService, "version", "oid", Collections.emptyList());
     assertTrue(result.isEmpty());
   }
 
   /* branch coverage for private boolean containsEntry() method
    * when !Objects.equals(existing.getSystem(), newEntry.getSystem())
-   * line 136
+   * line 135
    */
   @Test
-  void containsEntry_branchCoverage_notEqualsSystem() {
+  void containsEntryNotEqualsSystem() {
     ValueSet.ValueSetExpansionContainsComponent existing =
         new ValueSet.ValueSetExpansionContainsComponent();
     existing.setCode("A");
@@ -1203,8 +1094,8 @@ class FhirTerminologyServiceTest {
   }
 
   /* branch coverage for private boolean containsEntry() method
-   * when !Objects.equals(existing.getSystem(), newEntry.getSystem())
-   * line 137
+   * when !Objects.equals(existing.getVersion(), newEntry.getVersion())
+   * line 136
    */
   @Test
   void containsEntry_branchCoverage_notEqualsVersion() {
@@ -1238,34 +1129,31 @@ class FhirTerminologyServiceTest {
     }
   }
 
-  /* branch test getValueSetConcepts(), line 209
+  /* branch test getValueSetConcepts(), line 204
    * when valueSet.getExpansion() == null, it should: return List.of();
    */
   @Test
-  void getValueSetConceptsReturnsEmptyListWhenExpansionNull() {
+  void getValueSetConceptsReturnsEmptyListWhenExpansionNull()
+      throws NoSuchFieldException, SecurityException {
     org.hl7.fhir.r4.model.ValueSet vs = new org.hl7.fhir.r4.model.ValueSet();
     vs.setExpansion(null);
-    CodeSystemEntry cse = new CodeSystemEntry();
+
     try {
       java.lang.reflect.Method method =
           FhirTerminologyService.class.getDeclaredMethod(
-              "getValueSetConcepts",
-              org.hl7.fhir.r4.model.ValueSet.class,
-              List.class,
-              String.class);
+              "getValueSetConcepts", org.hl7.fhir.r4.model.ValueSet.class);
       method.setAccessible(true);
       @SuppressWarnings("unchecked")
       List<QdmValueSet.Concept> result =
-          (List<QdmValueSet.Concept>)
-              method.invoke(fhirTerminologyService, vs, List.of(cse), "QDM");
+          (List<QdmValueSet.Concept>) method.invoke(fhirTerminologyService, vs);
       assertTrue(result.isEmpty());
     } catch (Exception e) {
       throw new IllegalArgumentException(e);
     }
   }
 
-  /* branch test getValueSetConcepts(), line 209
-   * when valueSet.valueSet.getExpansion().getTotal() <= 0, it should: return List.of();
+  /* branch test getValueSetConcepts(), line 204
+   * when valueSet.valueSet.getExpansion().getTotal() == 0, it should: return List.of();
    */
   @Test
   void getValueSetConceptsReturnsEmptyListWhenExpansionTotalIsLessThan0() {
@@ -1274,30 +1162,60 @@ class FhirTerminologyServiceTest {
     exp1.setOffset(0);
     exp1.setTotal(0);
     vs.setExpansion(exp1);
-    CodeSystemEntry cse = new CodeSystemEntry();
     try {
       java.lang.reflect.Method method =
           FhirTerminologyService.class.getDeclaredMethod(
-              "getValueSetConcepts",
-              org.hl7.fhir.r4.model.ValueSet.class,
-              List.class,
-              String.class);
+              "getValueSetConcepts", org.hl7.fhir.r4.model.ValueSet.class);
       method.setAccessible(true);
       @SuppressWarnings("unchecked")
       List<QdmValueSet.Concept> result =
-          (List<QdmValueSet.Concept>)
-              method.invoke(fhirTerminologyService, vs, List.of(cse), "QDM");
+          (List<QdmValueSet.Concept>) method.invoke(fhirTerminologyService, vs);
       assertTrue(result.isEmpty());
     } catch (Exception e) {
       throw new IllegalArgumentException(e);
     }
   }
 
-  /* branch coverage for getValueSetConcepts() method line 219
-   * when !optionalCodeSystemEntry.isPresent()
+  /* branch test getValueSetConcepts(), line 204
+   * when valueSet.valueSet.getExpansion().getTotal() > 0, it should: return List<QdmValueSet.Concept>;
    */
   @Test
-  void getValueSetConcepts_branchCoverage_optionalCodeSystemEntryNotPresent() {
+  void getValueSetConceptsReturnsConceptsWhenExpansionTotalPositive() {
+    org.hl7.fhir.r4.model.ValueSet vs = new org.hl7.fhir.r4.model.ValueSet();
+    ValueSet.ValueSetExpansionComponent exp1 = new ValueSet.ValueSetExpansionComponent();
+    exp1.setOffset(0);
+    exp1.setTotal(1);
+    ValueSet.ValueSetExpansionContainsComponent concept =
+        new ValueSet.ValueSetExpansionContainsComponent();
+    concept.setCode("test-code");
+    concept.setDisplay("Test Display");
+    concept.setSystem("http://test-system");
+    concept.setVersion("v1");
+    exp1.addContains(concept);
+    vs.setExpansion(exp1);
+    when(codeSystemRepository.findByFullUrlAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(java.util.Optional.empty());
+    try {
+      java.lang.reflect.Method method =
+          FhirTerminologyService.class.getDeclaredMethod(
+              "getValueSetConcepts", org.hl7.fhir.r4.model.ValueSet.class);
+      method.setAccessible(true);
+      @SuppressWarnings("unchecked")
+      List<QdmValueSet.Concept> result =
+          (List<QdmValueSet.Concept>) method.invoke(fhirTerminologyService, vs);
+      assertEquals(1, result.size());
+      assertEquals("test-code", result.get(0).getCode());
+      assertEquals("http://test-system", result.get(0).getCodeSystemOid());
+    } catch (Exception e) {
+      throw new IllegalArgumentException(e);
+    }
+  }
+
+  /* branch coverage for getValueSetConcepts() method line 211
+   * when !codeSystemOptional.isPresent()
+   */
+  @Test
+  void getValueSetConceptsOptionalCodeSystemEntryNotPresent() {
     // Create a ValueSet with an expansion containing a concept whose system is not in
     // codeSystemEntries
     org.hl7.fhir.r4.model.ValueSet valueSet = new org.hl7.fhir.r4.model.ValueSet();
@@ -1312,21 +1230,14 @@ class FhirTerminologyServiceTest {
     expansion.addContains(concept);
     valueSet.setExpansion(expansion);
 
-    // Provide empty codeSystemEntries to ensure optionalCodeSystemEntry.isPresent() is false
-    List<CodeSystemEntry> emptyCodeSystemEntries = Collections.emptyList();
-
     try {
       java.lang.reflect.Method method =
           FhirTerminologyService.class.getDeclaredMethod(
-              "getValueSetConcepts",
-              org.hl7.fhir.r4.model.ValueSet.class,
-              List.class,
-              String.class);
+              "getValueSetConcepts", org.hl7.fhir.r4.model.ValueSet.class);
       method.setAccessible(true);
       @SuppressWarnings("unchecked")
       List<QdmValueSet.Concept> result =
-          (List<QdmValueSet.Concept>)
-              method.invoke(fhirTerminologyService, valueSet, emptyCodeSystemEntries, "QDM");
+          (List<QdmValueSet.Concept>) method.invoke(fhirTerminologyService, valueSet);
       assertEquals(1, result.size());
       // codeSystemOid should be the original system URL
       assertEquals("http://unmapped-system-url", result.get(0).getCodeSystemOid());
@@ -1335,11 +1246,11 @@ class FhirTerminologyServiceTest {
     }
   }
 
-  /* branch coverage for traverseValueSet() method line 300
+  /* branch coverage for traverseValueSet() method line 297
    * when identifier.getValue() == null
    */
   @Test
-  void traverseValueSet_branchCoverage_identifierValueNull() throws Exception {
+  void traverseValueSetIdentifierValueNull() throws Exception {
     // Prepare a ValueSet with identifier value null
     ValueSet vs = new ValueSet();
     vs.setId("vs-null");
@@ -1364,11 +1275,11 @@ class FhirTerminologyServiceTest {
     assertEquals("", valueSetList.get(0).getOid());
   }
 
-  /* branch coverage for traverseValueSet() method line 300
+  /* branch coverage for traverseValueSet() method line 297
    * when identifier.getValue().isEmpty()
    */
   @Test
-  void traverseValueSet_branchCoverage_identifierValueEmpty() throws Exception {
+  void traverseValueSetIdentifierValueEmpty() throws Exception {
     // Prepare a ValueSet with identifier value empty string
     ValueSet vs = new ValueSet();
     vs.setId("vs-empty");
@@ -1393,11 +1304,11 @@ class FhirTerminologyServiceTest {
     assertEquals("", valueSetList.get(0).getOid());
   }
 
-  /* branch coverage for traverseValueSet(), line 311
+  /* branch coverage for traverseValueSet(), line 308
    * map(extension -> String.valueOf(extension.getValue())
    */
   @Test
-  void traverseValueSet_branchCoverage_extensionValuePresent_line311() throws Exception {
+  void traverseValueSetExtensionValuePresent() throws Exception {
     ValueSet vs = new ValueSet();
     vs.setId("vs-ext-present-311");
     Identifier id = new Identifier();
@@ -1406,7 +1317,7 @@ class FhirTerminologyServiceTest {
     Meta meta = new Meta();
     meta.setLastUpdated(new Date());
     vs.setMeta(meta);
-    // Add extension for line 311
+    // Add extension for line 308
     vs.addExtension(
         new org.hl7.fhir.r4.model.Extension(
             "http://hl7.org/fhir/StructureDefinition/valueset-author",
@@ -1423,53 +1334,295 @@ class FhirTerminologyServiceTest {
     assertEquals("author-name", valueSetList.get(0).getAuthor());
   }
 
-  /* branch coverage for getAllCodeSystems() method line 366
-   * when !version.getFhir().equals(codeSystem.getVersion()
+  /* branch coverage for traverseValueSet() method, line 313
+   * .map(x -> x.getSystem())
    */
   @Test
-  void getAllCodeSystems_branchCoverage_fhirVersionNotEquals() {
-    // version.getFhir() != codeSystem.getVersion()
-    var c1 = new gov.cms.madie.terminology.models.CodeSystem();
-    c1.setTitle("t1");
-    c1.setOid("fakeoid1");
-    c1.setVersion("1.0");
-    var c2 = new gov.cms.madie.terminology.models.CodeSystem();
-    c2.setTitle("t2");
-    c2.setOid("fakeoid2");
-    c2.setVersion("2.0");
-    CodeSystemEntry.Version cv1 =
-        new CodeSystemEntry.Version().toBuilder().fhir("not1.0").vsac("1").build();
-    var ce1 = new CodeSystemEntry().toBuilder().versions(List.of(cv1)).oid("fakeoid1").build();
-    List<CodeSystemEntry> codeSystemEntries = List.of(ce1);
-    List<gov.cms.madie.terminology.models.CodeSystem> codeSystems = List.of(c1, c2);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    when(codeSystemRepository.findAll()).thenReturn(codeSystems);
-    List<gov.cms.madie.terminology.models.CodeSystem> resultListAll =
-        fhirTerminologyService.getAllCodeSystems();
-    // Should not set QdmDisplayVersion for c1 since fhir version does not match
-    assertNull(resultListAll.get(0).getQdmDisplayVersion());
+  void traverseValueSetComposedOfSystem() throws Exception {
+    ValueSet vs = new ValueSet();
+    vs.setId("vs-composed-of");
+    Identifier id = new Identifier();
+    id.setValue("urn:oid:1");
+    vs.setIdentifier(List.of(id));
+    Meta meta = new Meta();
+    meta.setLastUpdated(new Date());
+    vs.setMeta(meta);
+    // Compose with include having system
+    ValueSet.ValueSetComposeComponent compose = new ValueSet.ValueSetComposeComponent();
+    ValueSet.ConceptSetComponent include1 = new ValueSet.ConceptSetComponent();
+    include1.setSystem("http://loinc.org");
+    compose.setInclude(List.of(include1));
+    vs.setCompose(compose);
+    Bundle.BundleEntryComponent entry = new Bundle.BundleEntryComponent();
+    entry.setResource(vs);
+    List<ValueSetForSearch> valueSetList = new ArrayList<>();
+    java.lang.reflect.Method method =
+        FhirTerminologyService.class.getDeclaredMethod(
+            "traverseValueSet", Bundle.BundleEntryComponent.class, List.class);
+    method.setAccessible(true);
+    method.invoke(fhirTerminologyService, entry, valueSetList);
+    assertEquals(1, valueSetList.size());
+    assertEquals("http://loinc.org", valueSetList.get(0).getComposedOf());
   }
 
-  /* branch coverage for getAllCodeSystems() method line 367
-   * when ersion.getVsac() == null
+  /* branch coverage for traverseValueSet() method line 319
+   * .map(extension -> String.valueOf(extension.getValue()))
    */
   @Test
-  void getAllCodeSystems_branchCoverage_vsacNull() {
-    // version.getFhir() == codeSystem.getVersion(), but version.getVsac() == null
-    var c1 = new gov.cms.madie.terminology.models.CodeSystem();
-    c1.setTitle("t1");
-    c1.setOid("fakeoid1");
-    c1.setVersion("1.0");
-    CodeSystemEntry.Version cv1 =
-        new CodeSystemEntry.Version().toBuilder().fhir("1.0").vsac(null).build();
-    var ce1 = new CodeSystemEntry().toBuilder().versions(List.of(cv1)).oid("fakeoid1").build();
-    List<CodeSystemEntry> codeSystemEntries = List.of(ce1);
-    List<gov.cms.madie.terminology.models.CodeSystem> codeSystems = List.of(c1);
-    when(mappingService.getCodeSystemEntries()).thenReturn(codeSystemEntries);
-    when(codeSystemRepository.findAll()).thenReturn(codeSystems);
-    List<gov.cms.madie.terminology.models.CodeSystem> resultListAll =
-        fhirTerminologyService.getAllCodeSystems();
-    // Should not set QdmDisplayVersion for c1 since vsac is null
-    assertNull(resultListAll.get(0).getQdmDisplayVersion());
+  void traverseValueSetEffectiveDateExtensionValue() throws Exception {
+    ValueSet vs = new ValueSet();
+    vs.setId("vs-effective-date");
+    Identifier id = new Identifier();
+    id.setValue("urn:oid:1");
+    vs.setIdentifier(List.of(id));
+    Meta meta = new Meta();
+    meta.setLastUpdated(new Date());
+    vs.setMeta(meta);
+    // Compose with include having system
+    ValueSet.ValueSetComposeComponent compose = new ValueSet.ValueSetComposeComponent();
+    ValueSet.ConceptSetComponent include1 = new ValueSet.ConceptSetComponent();
+    include1.setSystem("http://loinc.org");
+    compose.setInclude(List.of(include1));
+    vs.setCompose(compose);
+    // Add effectiveDate extension for line 319
+    vs.addExtension(
+        new org.hl7.fhir.r4.model.Extension(
+            "http://hl7.org/fhir/StructureDefinition/valueset-effectiveDate",
+            new org.hl7.fhir.r4.model.StringType("2026-03-15")));
+    Bundle.BundleEntryComponent entry = new Bundle.BundleEntryComponent();
+    entry.setResource(vs);
+    List<ValueSetForSearch> valueSetList = new ArrayList<>();
+    java.lang.reflect.Method method =
+        FhirTerminologyService.class.getDeclaredMethod(
+            "traverseValueSet", Bundle.BundleEntryComponent.class, List.class);
+    method.setAccessible(true);
+    method.invoke(fhirTerminologyService, entry, valueSetList);
+    assertEquals(1, valueSetList.size());
+    assertEquals("2026-03-15", valueSetList.get(0).getEffectiveDate());
+  }
+
+  /* coverage for DataAccessException, lines 463-467
+   * when doing updateOrInsertAllCodeSystems(),
+   */
+  @Test
+  void retrieveAllCodeSystemsHandlesDataAccessException() {
+    UmlsUser umlsUser = UmlsUser.builder().apiKey(TEST_API_KEY).harpId(TEST_HARP_ID).build();
+    gov.cms.madie.terminology.models.CodeSystem codeSystem =
+        gov.cms.madie.terminology.models.CodeSystem.builder()
+            .oid("urn:oid:2.16.840.1.113883.6.1")
+            .name("LOINC")
+            .version(
+                gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+                    .fhirVersion("2.40")
+                    .build())
+            .build();
+    // Mock repository to throw DataAccessException when save is called
+    doThrow(new DataAccessException("Simulated DB error") {})
+        .when(codeSystemRepository)
+        .save(any());
+    when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
+    when(fhirTerminologyServiceWebClient.getCodeSystemsPage(anyInt(), anyInt(), anyString()))
+        .thenReturn(
+            "{\"resourceType\":\"Bundle\",\"entry\":[{\"resource\":{\"resourceType\":\"CodeSystem\",\"id\":\"cs1\",\"name\":\"LOINC\",\"version\":\"2.40\",\"title\":\"LOINC\",\"identifier\":[{\"value\":\"urn:oid:2.16.840.1.113883.6.1\"}]}}]}");
+    // Call the method under test
+    List<gov.cms.madie.terminology.models.CodeSystem> result =
+        fhirTerminologyService.retrieveAllCodeSystems(umlsUser);
+    // Assert that the result is not empty and the error branch was triggered
+    assertFalse(result.isEmpty());
+    assertEquals("LOINC", result.get(0).getName());
+  }
+
+  /* branch coverage for retrieveCode(), line 367:
+   * codeSystem != null
+   */
+  @Test
+  void retrieveCodeCodeSystemNull() {
+    String codeName = "test-code";
+    String codeSystemName = "LOINC";
+    String version = "2.40";
+    // Mock repository to return empty (codeSystem == null)
+    when(codeSystemRepository.findByNameAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(Optional.empty());
+    Code result =
+        fhirTerminologyService.retrieveCode(codeName, codeSystemName, version, TEST_API_KEY);
+    assertNull(result);
+  }
+
+  /* branch coverage for retrieveCode(), line 367:
+   * !codeSystem.isVsacSearchable()
+   */
+  @Test
+  void retrieveCodeCodeSystemNotVsacSearchable() {
+    String codeName = "test-code";
+    String codeSystemName = "LOINC";
+    String version = "2.40";
+    // Mock codeSystem with isVsacSearchable() == false
+    gov.cms.madie.terminology.models.CodeSystem codeSystem =
+        mock(gov.cms.madie.terminology.models.CodeSystem.class);
+    when(codeSystem.isVsacSearchable()).thenReturn(false);
+    when(codeSystemRepository.findByNameAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(Optional.of(codeSystem));
+    Code result =
+        fhirTerminologyService.retrieveCode(codeName, codeSystemName, version, TEST_API_KEY);
+    assertNull(result);
+  }
+
+  /* branch coverage for retrieveCode(), line 367:
+   * codeSystem.isVsacSearchable()
+   */
+  @Test
+  void retrieveCodeCodeSystemVsacSearchableTrue() {
+    String codeName = "test-code";
+    String codeSystemName = "LOINC";
+    String version = "2.40";
+    // Mock codeSystem with isVsacSearchable() == true
+    gov.cms.madie.terminology.models.CodeSystem codeSystem =
+        mock(gov.cms.madie.terminology.models.CodeSystem.class);
+    when(codeSystem.isVsacSearchable()).thenReturn(true);
+    // Mock getVersion() to return a valid Version object
+    gov.cms.madie.terminology.models.CodeSystem.Version versionObj =
+        gov.cms.madie.terminology.models.CodeSystem.Version.builder()
+            .fhirVersion("2.40")
+            .vsacVersion("2.40")
+            .build();
+    when(codeSystem.getVersion()).thenReturn(versionObj);
+    when(codeSystemRepository.findByNameAndVersionFhirVersion(anyString(), anyString()))
+        .thenReturn(Optional.of(codeSystem));
+    // Mock fhirContext.newJsonParser() to return a valid parser
+    when(fhirContext.newJsonParser())
+        .thenReturn(ca.uhn.fhir.context.FhirContext.forR4().newJsonParser());
+    // Mock web client response with all expected parameters
+    String codeJson =
+        "{\"resourceType\":\"Parameters\",\"parameter\":["
+            + "{\"name\":\"name\",\"valueString\":\"LOINC\"},"
+            + "{\"name\":\"version\",\"valueString\":\"2.40\"},"
+            + "{\"name\":\"display\",\"valueString\":\"Test Display\"},"
+            + "{\"name\":\"Oid\",\"valueString\":\"2.16.840.1.113883.6.1\"}"
+            + "]}";
+    when(fhirTerminologyServiceWebClient.getCodeResource(anyString(), any(), anyString()))
+        .thenReturn(codeJson);
+    Code result =
+        fhirTerminologyService.retrieveCode(codeName, codeSystemName, version, TEST_API_KEY);
+    assertNotNull(result);
+  }
+
+  /* branch coverage for lines 406:
+   * assert newOffset != null;
+   */
+  @Test
+  void retrieveAllCodeSystemsOffsetNullFromNextLinkAssertsNotNull() {
+    when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
+
+    // Build a bundle with a next link containing only _count
+    org.hl7.fhir.r4.model.CodeSystem cs1 = new org.hl7.fhir.r4.model.CodeSystem();
+    cs1.setTitle("title1");
+    cs1.setName("name1");
+    cs1.setVersion("v1");
+    cs1.setId("title1v1");
+    cs1.setUrl("http://example.com/cs1");
+    var id1 = new ArrayList<Identifier>();
+    id1.add(new Identifier().setValue("codeUrl1"));
+    Meta m1 = new Meta();
+    m1.setVersionId("vid1");
+    m1.setLastUpdated(new Date());
+    cs1.setMeta(m1);
+    cs1.setIdentifier(id1);
+
+    Bundle bundle1 = new Bundle();
+    bundle1.addEntry(new Bundle.BundleEntryComponent().setResource(cs1));
+    bundle1.addLink(
+        new Bundle.BundleLinkComponent()
+            .setRelation("next")
+            .setUrl("http://example.com/res/CodeSystem?_count=50"));
+
+    // Second bundle (recursive result) with another CodeSystem
+    org.hl7.fhir.r4.model.CodeSystem cs2 = new org.hl7.fhir.r4.model.CodeSystem();
+    cs2.setTitle("title2");
+    cs2.setName("name2");
+    cs2.setVersion("v2");
+    cs2.setId("title2v2");
+    cs2.setUrl("http://example.com/cs2");
+    var id2 = new ArrayList<Identifier>();
+    id2.add(new Identifier().setValue("codeUrl2"));
+    Meta m2 = new Meta();
+    m2.setVersionId("vid2");
+    m2.setLastUpdated(new Date());
+    cs2.setMeta(m2);
+    cs2.setIdentifier(id2);
+
+    Bundle bundle2 = new Bundle();
+    bundle2.addEntry(new Bundle.BundleEntryComponent().setResource(cs2));
+
+    IParser parser = FhirContext.forR4().newJsonParser();
+    String json1 = parser.encodeResourceToString(bundle1);
+
+    // initial page invoked by retrieveAllCodeSystems -> return page for offset=0,count=50
+    when(fhirTerminologyServiceWebClient.getCodeSystemsPage(eq(0), eq(50), anyString()))
+        .thenReturn(json1);
+
+    umlsUser = UmlsUser.builder().apiKey(TEST_API_KEY).harpId(TEST_HARP_ID).build();
+
+    assertThrows(
+        AssertionError.class, () -> fhirTerminologyService.retrieveAllCodeSystems(umlsUser));
+  }
+
+  /* branch coverage for line 407:
+   * assert count != null;
+   */
+  @Test
+  void retrieveAllCodeSystemsCountNullFromNextLinkAssertsNotNull() {
+    when(fhirContext.newJsonParser()).thenReturn(FhirContext.forR4().newJsonParser());
+
+    // Build a bundle with a next link containing only _offset
+    org.hl7.fhir.r4.model.CodeSystem cs1 = new org.hl7.fhir.r4.model.CodeSystem();
+    cs1.setTitle("title1");
+    cs1.setName("name1");
+    cs1.setVersion("v1");
+    cs1.setId("title1v1");
+    cs1.setUrl("http://example.com/cs1");
+    var id1 = new ArrayList<Identifier>();
+    id1.add(new Identifier().setValue("codeUrl1"));
+    Meta m1 = new Meta();
+    m1.setVersionId("vid1");
+    m1.setLastUpdated(new Date());
+    cs1.setMeta(m1);
+    cs1.setIdentifier(id1);
+
+    Bundle bundle1 = new Bundle();
+    bundle1.addEntry(new Bundle.BundleEntryComponent().setResource(cs1));
+    bundle1.addLink(
+        new Bundle.BundleLinkComponent()
+            .setRelation("next")
+            .setUrl("http://example.com/res/CodeSystem?_offset=50"));
+
+    // Second bundle (recursive result) with another CodeSystem
+    org.hl7.fhir.r4.model.CodeSystem cs2 = new org.hl7.fhir.r4.model.CodeSystem();
+    cs2.setTitle("title2");
+    cs2.setName("name2");
+    cs2.setVersion("v2");
+    cs2.setId("title2v2");
+    cs2.setUrl("http://example.com/cs2");
+    var id2 = new ArrayList<Identifier>();
+    id2.add(new Identifier().setValue("codeUrl2"));
+    Meta m2 = new Meta();
+    m2.setVersionId("vid2");
+    m2.setLastUpdated(new Date());
+    cs2.setMeta(m2);
+    cs2.setIdentifier(id2);
+
+    Bundle bundle2 = new Bundle();
+    bundle2.addEntry(new Bundle.BundleEntryComponent().setResource(cs2));
+
+    IParser parser = FhirContext.forR4().newJsonParser();
+    String json1 = parser.encodeResourceToString(bundle1);
+
+    // initial page invoked by retrieveAllCodeSystems -> return page for offset=0,count=50
+    when(fhirTerminologyServiceWebClient.getCodeSystemsPage(eq(0), eq(50), anyString()))
+        .thenReturn(json1);
+
+    umlsUser = UmlsUser.builder().apiKey(TEST_API_KEY).harpId(TEST_HARP_ID).build();
+
+    assertThrows(
+        AssertionError.class, () -> fhirTerminologyService.retrieveAllCodeSystems(umlsUser));
   }
 }
